src/objects/maica_cc__Setting__c.object
<CustomObject>
    <fields>
        <fullName>Break_Processor_Mode__c</fullName>
        <description>Setting API Name:2c9_Setting</description>
        <label>Break Processor Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fill Gaps</fullName>
                </value>
                <value>
                    <fullName>Reference Unavailability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Award_Classification_Level_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Award Classification Level ID</label>
        <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Client_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Client Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Client_Hiring_Manager_Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Client Hiring Manager Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Settings (Default Client Hiring Manager Contact ID)</relationshipLabel>
        <relationshipName>Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Employee_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Employee Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Settings (Default Employee Account ID)</relationshipLabel>
        <relationshipName>Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Entity_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Payment Entity Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Settings (Default Payment Entity Account ID)</relationshipLabel>
        <relationshipName>Settings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Public_Holiday_Calendar_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Public Holiday Calendar ID</label>
        <referenceTo>tc9_pr__Calendar__c</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Schedule_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Schedule ID</label>
        <referenceTo>tc9_pr__Schedule__c</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Timesheet_Approver_Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Timesheet Approver Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Timesheet_Calendar_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Default Timesheet Calendar ID</label>
        <referenceTo>tc9_pr__Calendar__c</referenceTo>
        <relationshipLabel>Settings (Default Timesheet Calendar ID)</relationshipLabel>
        <relationshipName>Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Merge_Processor_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting API Name:2c9_Setting</description>
        <label>Is Merge Processor Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KMs_Pay_Code_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>KMs Pay Code ID</label>
        <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merge_Threshold__c</fullName>
        <description>Setting API Name:2c9_Setting</description>
        <label>Merge Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sleepover_Pay_Code_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setting API Name:2c9_Setting</description>
        <label>Sleepover Pay Code ID</label>
        <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
        <relationshipLabel>Settings (Sleepover Pay Code ID)</relationshipLabel>
        <relationshipName>Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>